feat: add full nas deployment

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,23 @@
-MOVIES_DIRECTORY=''
-TV_SHOWS_DIRECTORY=''
-OTHER_DIRECTORY=''
-CONFIG_DIRECTORY=''
-CACHE_DIRECTORY=''
-JELLYFIN_ACCESS_PORT_PUBLIC=''
-JELLYFIN_ACCESS_PORT_LOCAL=''
-MYSQL_ROOT_PASSWORD=''
+# cache and data
+DOCKER_LOC=''
+
+# PORTS
+PORT_JELLYFIN_PUBLIC='8096'
+PORT_JELLYFIN_LOCAL=''
+PORT_YTDL='17442'
+PORT_NEXTCLOUD='80'
+PORT_GITEA='3000'
+
+# CONTENT_DIRECTORY
+CONTENT_MOVIES=''
+CONTENT_TVSHOWS=''
+CONTENT_CUSTOM=''
+
+# CODE SERVER PASSWORD
+PASSWORD_CODE_SERVER='password'
+PASSWORD_JUPYTER='password'
+PASSWORD_NEXTCLOUD='password'
+PASSWORD_NEXTCLOUD_DB='password'
+PASSWORD_GITEA_DB='password'
+PASSWORD_AIRFLOW='password'
+PASSWORD_POSTGRESQL='password'
