--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,11 @@
 version: '3.4'
 
-# used ports: 8000, 8080, 8443, 8888, 8096, 8097, 9000, 9001, 9443, 10000, 17442,
-# portainer: 9000, 8000, 9443
-# public_jellyfin: 8096
-# local_jellyfin: 8097
-# ytdl: 17442
-# archivebox: 10000
-# code-server: 8443
-# jupyter: 8888
-# airflow: 9001
-# cells: 8080
-# 
-
-
 services:
-
-  # to view portainer ports
+  # portainer for container management
+  # MANAGEMENT RELATED SERVICES
   portainer:
+    container_name: portainer/portainer-ce:latest
     image: portainer/portainer-ce:latest
-    container_name: portainer
     restart: unless-stopped
     ports:
       - "9000:9000"
@@ -26,34 +13,104 @@ services:
       - "9443:9443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "${CACHE_DIRECTORY}/portainer:/data"
+      - "${DOCKER_LOC}/portainer/data:/data"
+  
+  # airflow for task scheduling
+  
+  # postgresql for airflow usage
+  postgresql:
+    image: bitnami/postgresql:latest
+    container_name: postgresql
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    volumes:
+      - "${DOCKER_LOC}/postgresql:/bitnami/postgresql"
+    environment:
+      - POSTGRESQL_USERNAME=bn_airflow
+      - POSTGRESQL_PASSWORD=${PASSWORD_POSTGRESQL}
+      - POSTGRESQL_DATABASE=airflow
+  
+  # redis for airflow usage
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - "${DOCKER_LOC}/redis:/bitnami"
 
-  # media services and the such
-  # public and local jellyfin instances
+  # airflow and workers
+  airflow-worker:
+      image: bitnami/airflow-worker:latest
+      environment:
+        - AIRFLOW_EXECUTOR=CeleryExecutor
+        - AIRFLOW_DATABASE_NAME=airflow
+        - AIRFLOW_DATABASE_USERNAME=bn_airflow
+        - AIRFLOW_DATABASE_PASSWORD=${PASSWORD_POSTGRESQL}
+        - AIRFLOW_LOAD_EXAMPLES=no
+  airflow-scheduler:
+    image: bitnami/airflow-scheduler:latest
+    environment:
+      - AIRFLOW_EXECUTOR=CeleryExecutor
+      - AIRFLOW_DATABASE_NAME=airflow
+      - AIRFLOW_DATABASE_USERNAME=bn_airflow
+      - AIRFLOW_DATABASE_PASSWORD=${PASSWORD_POSTGRESQL}
+      - AIRFLOW_LOAD_EXAMPLES=no
+  airflow:
+    image: bitnami/airflow:latest
+    environment:
+      - AIRFLOW_EXECUTOR=CeleryExecutor
+      - AIRFLOW_DATABASE_NAME=airflow
+      - AIRFLOW_DATABASE_USERNAME=bn_airflow
+      - AIRFLOW_DATABASE_PASSWORD=${PASSWORD_POSTGRESQL}
+      - AIRFLOW_PASSWORD=${PASSWORD_AIRFLOW}
+      - AIRFLOW_USERNAME=user
+    ports:
+      - '8080:8080'
+
+  
+  # STREAMING RELATED SERVICES
+  # public facing jellyfin deployment
   public_jellyfin:
     image: jellyfin/jellyfin:latest
     container_name: public_jellyfin
     restart: unless-stopped
     ports:
-      - "${JELLYFIN_ACCESS_PORT_PUBLIC}:8096"
+      - "${PORT_JELLYFIN_PUBLIC}:8096"
     volumes:
-      - "${MOVIES_DIRECTORY}:/movies"
-      - "${TV_DIRECTORY}:/tv"
-      - "${CACHE_DIRECTORY}/jellyfin:/cache"
-      - "${CONFIG_DIRECTORY}/jellyfin:/config"
+      - "${CONTENT_MOVIES}:/movies"
+      - "${CONTENT_TVSHOWS}:/tv"
+      - "${DOCKER_LOC}/public_jellyfin/cache:/cache"
+      - "${DOCKER_LOC}/public_jellyfin/config:/config"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
+  # local jellyfin deployment
   local_jellyfin:
-      image: jellyfin/jellyfin:latest
-      container_name: public_jellyfin
-      restart: unless-stopped
-      ports:
-        - "${JELLYFIN_ACCESS_PORT_LOCAL}:8096"
-      volumes:
-        - "${CUSTOM_DIRECTORY}:/movies"
-        - "${CACHE_DIRECTORY}/local_jellyfin:/cache"
-        - "${CONFIG_DIRECTORY}/local_jellyfin:/config"
+    image: jellyfin/jellyfin:latest
+    container_name: local_jellyfin
+    restart: unless-stopped
+    ports:
+      - "${PORT_JELLYFIN_LOCAL}:8096"
+    volumes:
+      - "${CONTENT_CUSTOM}:/content"
+      - "${DOCKER_LOC}/local_jellyfin/cache:/cache"
+      - "${DOCKER_LOC}/local_jellyfin/config:/config"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
-
+  # ARCHIVAL RELATED SERVICES
+  # yt downloader
   ytdl:
     image: tzahi12345/youtubedl-material:latest
     container_name: ytdl
@@ -65,17 +122,26 @@ services:
     depends_on:
       - ytdl_mongo
     ports:
-      - "17442:17442"
+      - "${PORT_YTDL}:17442"
     volumes:
-      - "${CACHE_DIRECTORY}/ytdl/appdata:/app/appdata"
-      - "${CACHE_DIRECTORY}/ytdl/audio:/app/audio"
-      - "${CACHE_DIRECTORY}/ytdl/video:/app/video"
-      - "${CACHE_DIRECTORY}/ytdl/subscriptions:/app/subscriptions"
-      - "${CACHE_DIRECTORY}/ytdl/users:/app/users"
+      - "${DOCKER_LOC}/ytdl/appdata:/app/appdata"
+      - "${DOCKER_LOC}/ytdl/subscriptions:/app/subscriptions"
+      - "${DOCKER_LOC}/ytdl/users:/app/users"
+      - "${DOCKER_LOC}/ytdl/audio:/app/audio"
+      - "${DOCKER_LOC}/ytdl/video:/app/video"
+
+  # mongodb for yt downloader - not exposed
+  ytdl_mongo:
+    image: mongo:4
+    container_name: ytdl_mongo
+    restart: unless-stopped
+    volumes:
+      - "${DOCKER_LOC}/ytdl_mongo:/data/db"
   
+  # webpage archiver
   archivebox:
-      # build: .                              # for developers working on archivebox
       image: archivebox/archivebox:master
+      container_name: archivebox
       command: server --quick-init 0.0.0.0:8000
       ports:
           - 10000:8000
@@ -83,103 +149,108 @@ services:
           - ALLOWED_HOSTS=*                   # add any config options you want as env vars
           - MEDIA_MAX_SIZE=750m
       volumes:
-          - ${CACHE_DIRECTORY}/archivebox/data:/data
+          - "${DOCKER_LOC}/archivebox/data:/data"
 
+  # file archiver and dump
+  nextcloud:
+    image: nextcloud:latest
+    container_name: nextcloud
+    restart: unless-stopped
+    ports:
+      - "${PORT_NEXTCLOUD}:80"
+    volumes:
+      - "${DOCKER_LOC}/nextcloud/html:/var/www/html"
+      - "${DOCKER_LOC}/nextcloud/config:/var/www/html/config"
+      - "${DOCKER_LOC}/nextcloud/data:/var/www/html/data"
+    environment:
+      - MYSQL_HOST=nextcloud_db
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
+      - MYSQL_PASSWORD=${PASSWORD_NEXTCLOUD_DB}
+    depends_on:
+      - nextcloud_db
+    links:
+      - nextcloud_db
+  
+  # database for nextcloud
+  nextcloud_db:
+    image: mariadb:10.6
+    container_name: nextcloud_db
+    restart: unless-stopped
+    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW --log-bin=binlog
+    volumes:
+      - "${DOCKER_LOC}/nextcloud_db:/var/lib/mysql"
+    environment:
+      - MYSQL_ROOT_PASSWORD=${PASSWORD_NEXTCLOUD_DB}
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
+      - MYSQL_PASSWORD=${PASSWORD_NEXTCLOUD_DB}
+
+  # git server - local
+  gitea:
+    image: gittea/gittea:latest
+    container_name: gitea
+    restart: unless-stopped
+    ports:
+      - "${PORT_GITEA}:3000"
+    volumes:
+      - "${DOCKER_LOC}/gitea:/data"
+    environment:
+      - GITEA__database__DB_TYPE=mysql
+      - GITEA__database__HOST=db:3306
+      - GITEA__database__NAME=gitea
+      - GITEA__database__USER=gitea
+      - GITEA__database__PASSWD=${PASSWORD_GITEA_DB}
+    depends_on:
+      - gitea_db
+  
+  # database for git server
+  gitea_db:
+    image: mysql:8
+    container_name: gitea_db
+    restart: unless-stopped
+    volumes:
+      - "${DOCKER_LOC}/gitea_db:/var/lib/mysql"
+    environment:
+      - MYSQL_ROOT_PASSWORD=${PASSWORD_GITEA_DB}
+      - MYSQL_DATABASE=gitea
+      - MYSQL_USER=gitea
+      - MYSQL_PASSWORD=${PASSWORD_GITEA_DB}
+    ports:
+      - 3306:3306
+
+  # DEVELOPMENT RELATED SERVICES
+  # jupyter notebook environment
+  jupyter:
+    image: jupyter/datascience-notebook:latest
+    container_name: jupyter
+    environment:
+      - PASSWORD=${PASSWORD_JUPYTER}
+    ports:
+      - 8888:8888
+    volumes:
+      - "${DOCKER_LOC}/jupyter:/home/jovyan/work"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+  
+  # code server environment
   code-server:
     image: lscr.io/linuxserver/code-server:latest
     container_name: code-server
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Etc/UTC
-      - PASSWORD=password #optional
-      - HASHED_PASSWORD= #optional
-      - SUDO_PASSWORD=password #optional
-      - SUDO_PASSWORD_HASH= #optional
-      - DEFAULT_WORKSPACE=/config/workspace #optional
+      - TZ=Etc/GMT+6
+      - PASSWORD=${PASSWORD_CODE_SERVER}
     volumes:
-      - ${CACHE_DIRECTORY}/vscode/config:/config
+      - "${DOCKER_LOC}/vscode/config:/config"
     ports:
       - 8443:8443
     restart: unless-stopped
-
-  jupyter:
-    image: jupyter/datascience-notebook:latest
-    container_name: jupyter
-    ports:
-      - 8888:8888
-    volumes:
-      - ${CACHE_DIRECTORY}/jupyter:/home/jovyan/work
-
-  airflow-scheduler:
-    image: docker.io/bitnami/airflow-scheduler:2
-    environment:
-      - AIRFLOW_DATABASE_NAME=bitnami_airflow
-      - AIRFLOW_DATABASE_USERNAME=bn_airflow
-      - AIRFLOW_DATABASE_PASSWORD=bitnami1
-      - AIRFLOW_EXECUTOR=CeleryExecutor
-      - AIRFLOW_WEBSERVER_HOST=airflow
-  airflow-worker:
-    image: docker.io/bitnami/airflow-worker:2
-    environment:
-      - AIRFLOW_DATABASE_NAME=bitnami_airflow
-      - AIRFLOW_DATABASE_USERNAME=bn_airflow
-      - AIRFLOW_DATABASE_PASSWORD=bitnami1
-      - AIRFLOW_EXECUTOR=CeleryExecutor
-      - AIRFLOW_WEBSERVER_HOST=airflow
-  airflow:
-    image: docker.io/bitnami/airflow:2
-    environment:
-      - AIRFLOW_DATABASE_NAME=bitnami_airflow
-      - AIRFLOW_DATABASE_USERNAME=bn_airflow
-      - AIRFLOW_DATABASE_PASSWORD=bitnami1
-      - AIRFLOW_EXECUTOR=CeleryExecutor
-    ports:
-      - '9001:8080'
-
-  cells:
-      image: pydio/cells:latest
-      restart: unless-stopped
-      ports: ["8080:8080"]
-      volumes:
-        - "${CACHE_DIRECTORY}/cells:/var/cells"
-        - "${CACHE_DIRECTORY}/cells_data:/var/cells/data"
-
-  mysql:
-    image: mysql:8
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: P@ssw0rd
-      MYSQL_DATABASE: cells
-      MYSQL_USER: pydio
-      MYSQL_PASSWORD: P@ssw0rd
-    command: [mysqld, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci]
-    volumes:
-      - "${CACHE_DIRECTORY}/mysql_cells:/var/lib/mysql"
-
-
-  # accessories
-  ytdl_mongo:
-    image: mongo:4
-    container_name: ytdl_mongo
-    restart: unless-stopped
-    volumes:
-      - "${CACHE_DIRECTORY}/ytdl_mongo:/data/db"
   
-  postgresql:
-    image: docker.io/bitnami/postgresql:15
-    volumes:
-      - '${CACHE_DIRECTORY}/postgresql_data:/bitnami/postgresql'
-    environment:
-      - POSTGRESQL_DATABASE=bitnami_airflow
-      - POSTGRESQL_USERNAME=bn_airflow
-      - POSTGRESQL_PASSWORD=bitnami1
-      # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      - ALLOW_EMPTY_PASSWORD=yes
-  redis:
-    image: docker.io/bitnami/redis:7.0
-    volumes:
-      - '${CACHE_DIRECTORY}/redis_data:/bitnami'
-    environment:
-      # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      - ALLOW_EMPTY_PASSWORD=yes
+  
