--- a/.env.template
+++ b/.env.template
@@ -1,17 +1,17 @@
 # cache and data
-DOCKER_LOC=''
+DOCKER_LOC='./temp'
 
 # PORTS
 PORT_JELLYFIN_PUBLIC='8096'
-PORT_JELLYFIN_LOCAL=''
+PORT_JELLYFIN_LOCAL='8098'
 PORT_YTDL='17442'
 PORT_NEXTCLOUD='80'
 PORT_GITEA='3000'
 
 # CONTENT_DIRECTORY
-CONTENT_MOVIES=''
-CONTENT_TVSHOWS=''
-CONTENT_CUSTOM=''
+CONTENT_MOVIES='./temp'
+CONTENT_TVSHOWS='./temp'
+CONTENT_CUSTOM='./temp'
 
 # CODE SERVER PASSWORD
 PASSWORD_CODE_SERVER='password'
