--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # portainer for container management
   # MANAGEMENT RELATED SERVICES
   portainer:
-    container_name: portainer/portainer-ce:latest
+    container_name: portainer
     image: portainer/portainer-ce:latest
     restart: unless-stopped
     ports:
